Default world configuration tweaked

--- a/default_NORMAL.cfg
+++ b/default_NORMAL.cfg
@@ -1,9 +1,9 @@
 world-name=default_NORMAL
 ; FLAT or DEFAULT
-world-type=FLAT
+world-type=DEFAULT
 spawn-protection=16
 max-build-height=256
-generate-structures=false
+generate-structures=true
 generator-settings=
 world-seed=5827153887110237867
 startup-autoload=false
@@ -22,10 +22,10 @@ forceDefaultGameModeDimensional=false
 auto-heal=default
 enable-experience=true
 enable-health=true
-spawn-villagers=false
+spawn-villagers=true
 spawn-golems=false
 spawn-animals=true
-spawn-monsters=false
+spawn-monsters=true
 natural-animals=Bat,Chicken,Cow,Mooshroom,Ocelot,Pig,Sheep,Wolf,Horse,Rabbit
 natural-monsters=Enderman,PigZombie,Blaze,CaveSpider,Creeper,Ghast,MagamaCube,Silverfish,Skeleton,Slime,Spider,Witch,Zombie,Wither,EnderDragon,GiantZombie,Endermite,Guardian
 natural-golems=IronGolem,Snowman
